src/less/nault-theme.less
@import "components/_import.less";

@nlt-intro-margin:                        40px;

@rep-label-color:                      #9A71D5;

// extensions
// ========================================================================

body {
	overflow: hidden;
}

h1, h2, h3, h4, h5, .uk-text-lead, .uk-button, .uk-alert, .uk-description-list dt,
.uk-table th, .uk-form-label, .uk-form-icon, .nav-nano-card, .nav-representative-info,
.accounts-dropdown, .nav-container .nav-action-receive, .left-nav > li, .mobile-top-bar,
.uk-modal-dialog p {
	font-family: @global-secondary-font-family;
}

.uk-card, .uk-card-default, .uk-table, .uk-list {
	border-radius: @global-border-radius-medium;
}

@media (max-width: 939px) {
	button, .uk-button {
		margin-bottom: @nlt-intro-margin / 2!important;
	}

	h2:not(.uk-card-title):not(.uk-modal-title) {
		border-bottom: none!important;
	}
}

.uk-description-list dt {
	font-weight: 700;
	color: @global-color;
}

.uk-card-body > ul > li > a {
	color: @global-color;
}

.uk-button-default:disabled, .uk-button-primary:disabled, .uk-button-secondary:disabled, .uk-button-danger:disabled {
	background-color: #ddd;
	color: #999 !important;
	border-color: #dce9f9;
}

.uk-button {
	box-shadow: none;
}

.uk-table tbody tr {
	transition: none;
}

.uk-iconnav > * > a {
	color: #676686;
}

.uk-list > li.uk-list-header {
	border-left: 1px solid #dce9f9;
	border-right: 1px solid #dce9f9;
	border-radius: 10px 10px 0 0;
	background: #FFF;
	border-bottom: none;
	color: #999;
	text-transform: uppercase;
	font-size: .875rem;
	font-weight: 400;
}

.uk-select:invalid {
	color: #888;
}

.uk-alert {
	border-radius: 6px;
}

.nlt-inline-alert {
	display: inline-flex;

	> .icon-column {
		display: flex;
		flex-shrink: 0;
		align-items: center;
		justify-content: center;
		padding-left: 10px;
		padding-right: 20px;
	}

	> p {
		margin-top: 0;
	}
}

.nlt-dropdown {
	border-left: 1px solid #dce9f9;
	border-right: 1px solid #dce9f9;
	border-bottom: 1px solid #dce9f9;
}

.text-half-muted {
	color: #81809f;
}

a.fiat-currency-ticker {
	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
	color: #81809f !important;
	font-weight: 500;
	padding-left: 7px;
	height: 41px;
	line-height: 1.1;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

input[type=number] {
	-moz-appearance: textfield;
	box-shadow: none;
}

@mobile-top-bar-height: 50px;

.mobile-top-bar {
	display: none;
	height: @mobile-top-bar-height;
	color: #FFF;

	> .button-column {
		padding-left: 0;

		> .nav-button {
			display: flex;
			align-items: center;
			margin: 9px 0 8px 14px;

			> .uk-icon {
				margin-right: 10px;
			}

			> .app-name {
				font-size: 22px;
				font-weight: 400;
			}
		}
	}

	@media (max-width: 939px) {
		display: flex;
		position: fixed;
		width: 100vw;
		left: 0;
		margin-left: 0;
		z-index: 2;
	}
}

.app-grid {
	margin-top: 0;
	overflow: hidden;
	margin-left: 0;
	height: 100vh;
}

.content-container {
	background: #FFF;
	padding: 15px 20px;
	z-index: 1;
	overflow-x: hidden;
	overflow-y: scroll;
	height: 100vh;

	> *:last-child > *:last-child {
		margin-bottom: 20px;
	}

	@media (max-width: 939px) {
		margin-top: @mobile-top-bar-height;
		height: calc(100vh - @mobile-top-bar-height);
		padding: 15px 15px;
		transition: transform 0.5s ease;

		&.nav-expanded {
			transform: translateX(360px);
			position: relative;
			overflow-y: hidden;

			&::after {
				content: '';
				display: block;
				position: absolute;
				width: 100%;
				height: 90000px;
				background: rgba(0, 0, 0, 0.5);
				top: 0;
				left: 0;

				> * {
					pointer-events: none;
				}
			}
		}
	}

	@scrollbar-color: #AAB;

	// Scrollbar - Gecko (Firefox)
	scrollbar-width: thin;
	scrollbar-color: @scrollbar-color #FFF;

	// Scrollbar - WebKit (Chrome, Edge)
	&::-webkit-scrollbar {
		width: 9px;
	}

	&::-webkit-scrollbar-track {
		background: #FFF;
	}

	&::-webkit-scrollbar-thumb {
		background: @scrollbar-color;
		border-radius: 9px;
		border: 2px solid #FFF;
	}
}

.missing-accounts-hint {
	background: #F2F7EB !important;
	color: rgb(85, 121, 33);
	line-height: 1.8;
}

.missing-accounts-hint .uk-icon {
	vertical-align: 1px;
	margin-right: 2px;
}

.missing-accounts-hint .hint-action {
	text-decoration: none;
	padding-bottom: 2px;
	color: rgb(85, 121, 33);
	border-bottom: 2px dotted rgba(85, 121, 33, 0.6);
	transition: border-color 100ms ease-in-out;
}

.missing-accounts-hint .hint-action:hover {
	border-color: rgba(85, 121, 33, 1);
	border-bottom-style: solid;
}

.account-label-hover-styles() {
	border-color: @global-primary-background;
	background: @global-primary-background;
	color: #FFF;
}

.account-label {
	display: inline-block;
	background: #F1F1F1;
	border-radius: 6px;
	padding: 2px 10px;
	font-size: 13px;
	text-transform: uppercase;
	border: 2px solid transparent;
	transition: border-color 100ms ease-in-out;

	&, &:hover {
		color: #515151;
		text-decoration: none;
	}

	&.interactable:hover, &.blue {
		.account-label-hover-styles();
	}

	&.rep {
		text-transform: none;
		border-color: @rep-label-color;
		background: @rep-label-color;
		color: #FFF;
	}
}

.rep-donation-icon {
	color: #B08DE3 !important;

	&:hover {
		color: @rep-label-color !important;

		svg path {
			fill: @rep-label-color;
		}
	}
}

.nano-address-monospace {
	font-family: 'Roboto Mono', monospace;
}

.nano-address-clickable {
	display: inline-block;
	border-bottom: 2px solid transparent;
	transition: border-color 100ms ease-in-out;
	padding-bottom: 2px;

	&, &:hover {
		color: @global-color;
		text-decoration: none;
	}

	&:hover {
		.nano-address-clickable-hover-styles();
	}
}

.nano-address-actions {
	margin-bottom: 3px !important;
	padding-left: 10px;
}

.nano-address-clickable-hover-styles() {
	border-color: @global-primary-background;
}

.nano-address-breakable {
	line-break: anywhere;
}

.account-container .account-index {
	color: #676686;
	display: inline-block;
	font-size: 13px;
	margin-right: 7px;
}
/* ... */

